--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,27 +7,26 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large" style="text-align: center;">TeLlevoApp</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div>
     <div>
-      <ion-label class="center-content">Login</ion-label>
-      <ion-input class="center-content" label="Username" [(ngModel)]="userLoginModal.usuario"></ion-input>
-      <ion-input class="center-content" label="Password" [(ngModel)]="userLoginModal.pass"></ion-input>
+      <ion-row style="height: 100px"></ion-row>
+      <ion-label class="center-content">Cargar Credenciales</ion-label>
+      <ion-row style="height: 50px"></ion-row>
+      <ion-input class="center-content" label="Uauario" [(ngModel)]="userLoginModal.usuario"></ion-input>
+      <ion-input class="center-content" label="Contraseña" [(ngModel)]="userLoginModal.pass"></ion-input>
     </div>
-    <div>
+
+    <ion-row style="height: 20px"></ion-row>
+
+    <div style="text-align: center;">
       <!--
         Navigación con una función.
       -->
-      <ion-button color="success" (click)="userLogin(userLoginModal)">Login</ion-button>
-    </div>
-    <div>
-      <!--
-        Navegación via HTML.
-      -->
-      <ion-button [routerLink]="['/usuario',userLoginModal.usuario]">Go to Usuario with HREF</ion-button>
+      <ion-button color="success" (click)="userLogin(userLoginModal)">Ingresar</ion-button>
     </div>
   </div>
 </ion-content>
