--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -26,4 +26,11 @@
     </ion-item>
   </ion-list>
 
+  <div style="text-align: center;">
+    <!--
+      Navigación con una función.
+    -->
+    <ion-button color="success" >Ingresar</ion-button>
+  </div>
+
 </ion-content>
