--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,21 +23,25 @@
       <ion-label class="center-content">Comparte tus viajes!!!</ion-label>
       <ion-row style="height: 50px"></ion-row>
 
-      <ion-input label="Usuario" label-placement="floating" fill="solid" placeholder="Ingresar nombre Usuario" [(ngModel)]="userLoginModal.usuario" ></ion-input>
+      <ion-input label="Usuario" label-placement="floating" fill="solid" placeholder="Ingresar nombre Usuario"
+        [(ngModel)]="userLoginModal.usuario"></ion-input>
 
-    <br />
+      <br />
 
-      <ion-input label="Contraseña" label-placement="floating" fill="solid" type="password" placeholder="Ingresar Contraseña" [(ngModel)]="userLoginModal.pass"></ion-input>
+      <ion-input label="Contraseña" label-placement="floating" fill="solid" type="password"
+        placeholder="Ingresar Contraseña" [(ngModel)]="userLoginModal.pass"></ion-input>
 
     </div>
 
     <ion-row style="height: 20px"></ion-row>
 
     <div style="text-align: center;">
-      <!--
-        Navigación con una función.
-      -->
       <ion-button color="success" (click)="userLogin(userLoginModal)">Ingresar</ion-button>
+      <br/>
+      <br/>
+      <ion-button (click)="crearUsuario()" color="secondary" >Crear Cuenta</ion-button>
+      
+
     </div>
   </div>
 
