--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Pagina de Conductor</ion-title>
+    <ion-title>Pagina de Pasajero</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,16 +10,10 @@
     userInfoReceived?.apellido }} </h1>
   <ion-list [inset]="true">
     <ion-list-header>
-      <ion-label>Información del Conductor: </ion-label>
+      <ion-label>Información del Pasajero: </ion-label>
     </ion-list-header>
     <ion-item>
-      <ion-label>Nombre conductor: {{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Vehiculo: {{ userInfoReceived?.marcaVehiculo }} {{ userInfoReceived?.modeloVehiculo }} {{ userInfoReceived?.color }}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Patente Vehiculo: {{ userInfoReceived?.patente }}</ion-label>
+      <ion-label>Nombre pasajero: {{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label>
     </ion-item>
   </ion-list>
 
