--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -21,7 +21,16 @@
     <div>
       <ion-row style="height: 20px"></ion-row>
       <ion-label class="center-content">Comparte tus viajes!!!</ion-label>
-      <ion-row style="height: 50px"></ion-row>
+      <ion-row style="height: 20px"></ion-row>
+
+      <ion-list>
+        <ion-item>
+          <ion-select aria-label="Perfil" placeholder="Selecciona perfil">
+            <ion-select-option value="CONDUCTOR">Conductor</ion-select-option>
+            <ion-select-option value="PASAJERO">Pasajero</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
 
       <ion-input label="Usuario" label-placement="floating" fill="solid" placeholder="Ingresar nombre Usuario"
         [(ngModel)]="userLoginModal.usuario"></ion-input>
