--- a/src/app/registrarusuario/registrarusuario.page.html
+++ b/src/app/registrarusuario/registrarusuario.page.html
@@ -1,13 +1,34 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>registrarusuario</ion-title>
+    <ion-title>Registrar Usuario</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">registrarusuario</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" color="light">
+
+  <h1 class="center-content" style="padding-bottom: 50px">Datos del nuevo usuario</h1>
+  <ion-list [inset]="true">
+    <ion-input label="Nombre de Usuario" label-placement="floating" fill="solid"
+      placeholder="Ingresar nombre de Usuario"></ion-input>
+      <ion-input label="Nombre alumno" label-placement="floating" fill="solid"
+      placeholder="Ingresar nombre alumno"></ion-input>
+      <ion-input label="Apelido alumno" label-placement="floating" fill="solid"
+      placeholder="Ingresar apellido alumno"></ion-input>
+      <ion-input label="Marca Vehiculo" label-placement="floating" fill="solid"
+      placeholder="Ingresar marca vehiculo"></ion-input>
+      <ion-input label="Modelo Vehiculo" label-placement="floating" fill="solid"
+      placeholder="Ingresar modelo vehiculo"></ion-input>
+      <ion-input label="Color" label-placement="floating" fill="solid"
+      placeholder="Ingresar color vehiculo"></ion-input>
+      <ion-input label="Patente" label-placement="floating" fill="solid"
+      placeholder="Ingresar patente vehiculo"></ion-input>
+  </ion-list>
+
+  <div style="text-align: center;">
+
+    <ion-button expand="full" color="success" (click)="guardar()">Guardar</ion-button>
+    <ion-button expand="full" color="danger" (click)="salir()">Salir</ion-button>
+
+  </div>
+
 </ion-content>
