--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -10,7 +10,7 @@
     userInfoReceived?.apellido }} </h1>
   <ion-list [inset]="true">
     <ion-list-header>
-      <ion-label>Información del Pasajero: </ion-label>
+      <ion-label style="color: dodgerblue">Información del Pasajero: </ion-label>
     </ion-list-header>
     <ion-item>
       <ion-label>Nombre pasajero: {{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label>
