--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,7 +13,7 @@
   </ion-header>
 
   <div>
-    <ion-img src="assets\icon\logo.png"></ion-img>
+    <ion-img src="https://static.skillshare.com/cdn-cgi/image/quality=80,width=1000,format=auto/uploads/project/bccdbcb19db0d3cd894072dec63c2fb2/960efe4f.gif"></ion-img>
   </div>
 
   <div>
