--- a/src/app/registrarusuario/registrarusuario.page.html
+++ b/src/app/registrarusuario/registrarusuario.page.html
@@ -1,9 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Registrar Usuario</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true" color="light">
 
   <h1 class="center-content">Datos del nuevo usuario</h1>
@@ -20,6 +14,7 @@
       placeholder="Ingresar nombre de Usuario"></ion-input>
     <ion-input label="Ingresar contraseña" label-placement="floating" fill="solid" placeholder="Contraseña"
       type="password"></ion-input>
+    <ion-input label="E-mail" label-placement="floating" fill="solid" placeholder="Ingresar mail"></ion-input>
     <ion-input label="Nombre alumno" label-placement="floating" fill="solid"
       placeholder="Ingresar nombre alumno"></ion-input>
     <ion-input label="Apelido alumno" label-placement="floating" fill="solid"
