--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -45,10 +45,11 @@
     <ion-row style="height: 20px"></ion-row>
 
     <div style="text-align: center;">
-      <ion-button expand="full" color="success" (click)="userLogin(userLoginModal)">Ingresar</ion-button>
+      <ion-button expand="full" color="success" (click)="userLogin(userLoginModal)">
+        Ingresar</ion-button>
       <br/>
       <br/>
-      <ion-button (click)="crearUsuario()" color="secondary">Crear Cuenta</ion-button>  <ion-button (click)="recuperarContrasena()" color="warning">Recuperar Contraseña</ion-button>
+      <ion-button (click)="crearUsuario()" color="secondary"> <ion-icon name="person-add-outline"></ion-icon> Crear Cuenta</ion-button>  <ion-button (click)="recuperarContrasena()" color="warning"> <ion-icon name="bag-outline"> </ion-icon> Recuperar Contraseña</ion-button>
     </div>
   </div>
 
