--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -2,12 +2,23 @@
 
   <h1 class="center-content" style="padding-bottom: 50px">Bienvenido {{ userInfoReceived?.nombre }} {{
     userInfoReceived?.apellido }} </h1>
+
+    <ion-item>
+      <ion-avatar slot="start">
+        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+      </ion-avatar>
+      <ion-label> <ion-label>{{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label> </ion-label>
+    </ion-item>
+
   <ion-list [inset]="true">
     <ion-list-header>
       <ion-label style="color: dodgerblue">Información del Pasajero: </ion-label>
     </ion-list-header>
     <ion-item>
-      <ion-label>Nombre pasajero: {{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label>
+      <ion-label>Mail: {{ userInfoReceived?.mail }}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Contraseña: {{ userInfoReceived?.pass }}</ion-label>
     </ion-item>
   </ion-list>
 
