--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -2,18 +2,29 @@
 
   <h1 class="center-content" style="padding-bottom: 50px">Bienvenido {{ userInfoReceived?.nombre }} {{
     userInfoReceived?.apellido }} </h1>
+
+    <ion-item>
+      <ion-avatar slot="start">
+        <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+      </ion-avatar>
+      <ion-label> <ion-label>{{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label> </ion-label>
+    </ion-item>
+
   <ion-list [inset]="true">
     <ion-list-header>
       <ion-label style="color: dodgerblue">Información del Conductor: </ion-label>
     </ion-list-header>
     <ion-item>
-      <ion-label>Nombre conductor: {{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label>
-    </ion-item>
-    <ion-item>
       <ion-label>Vehiculo: {{ userInfoReceived?.marcaVehiculo }} {{ userInfoReceived?.modeloVehiculo }} {{ userInfoReceived?.color }}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label>Patente Vehiculo: {{ userInfoReceived?.patente }}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label [contentEditable]="true">Mail: {{ userInfoReceived?.mail }}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Contraseña: {{ userInfoReceived?.pass }}</ion-label>
     </ion-item>
   </ion-list>
 
