--- a/src/app/restablecercontrasena/restablecercontrasena.page.html
+++ b/src/app/restablecercontrasena/restablecercontrasena.page.html
@@ -1,7 +1,6 @@
 <ion-content [fullscreen]="true" color="light">
 
-  <h1 class="center-content" style="padding-bottom: 50px">Bienvenido {{ userInfoReceived?.nombre }} {{
-    userInfoReceived?.apellido }} </h1>
+  <h1 class="center-content" style="padding-bottom: 50px; text-align: center;" >TeLLevoApp</h1>
   <ion-list [inset]="true">
     <ion-list-header>
       <ion-label style="color: dodgerblue">Ingresar datos de usuario: </ion-label>
