--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,7 +13,8 @@
   </ion-header>
 
   <div>
-    <ion-img src="https://static.skillshare.com/cdn-cgi/image/quality=80,width=1000,format=auto/uploads/project/bccdbcb19db0d3cd894072dec63c2fb2/960efe4f.gif"></ion-img>
+    <ion-img
+      src="https://static.skillshare.com/cdn-cgi/image/quality=80,width=1000,format=auto/uploads/project/bccdbcb19db0d3cd894072dec63c2fb2/960efe4f.gif"></ion-img>
   </div>
 
   <div>
@@ -24,7 +25,7 @@
 
       <ion-list>
         <ion-item>
-          <ion-select aria-label="Perfil" placeholder="Selecciona perfil">
+          <ion-select (ionChange)="seleccion($event)" aria-label="Perfil" placeholder="Selecciona perfil">
             <ion-select-option value="CONDUCTOR">Conductor</ion-select-option>
             <ion-select-option value="PASAJERO">Pasajero</ion-select-option>
           </ion-select>
@@ -45,12 +46,16 @@
     <ion-row style="height: 20px"></ion-row>
 
     <div style="text-align: center;">
-      <ion-button expand="full" color="success" (click)="userLogin(userLoginModal)">
-        Ingresar</ion-button>
-      <br/>
-      <br/>
-      <ion-button (click)="crearUsuario()" color="secondary"> <ion-icon name="person-add-outline"></ion-icon> Crear Cuenta</ion-button>  <ion-button (click)="recuperarContrasena()" color="warning"> <ion-icon name="bag-outline"> </ion-icon> Recuperar Contraseña</ion-button>
+      <ion-button id="alerta" expand="full" color="success" (click)="userLogin(userLoginModal)"> Ingresar</ion-button>
+      <br />
+      <br />
+      <ion-button (click)="crearUsuario()" color="secondary"> <ion-icon name="person-add-outline"></ion-icon> Crear
+        Cuenta</ion-button> <ion-button (click)="recuperarContrasena()" color="warning"> <ion-icon name="bag-outline">
+        </ion-icon> Recuperar Contraseña</ion-button>
     </div>
   </div>
 
+<!--   <ion-alert trigger="alerta" header="Importante" subHeader=" " message="Debe selecionar perfil, usuario y contraseña"
+  [buttons]="alertButtons"></ion-alert> -->
+  
 </ion-content>
