--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -33,7 +33,7 @@
       </ion-list>
 
       <ion-input label="Usuario" label-placement="floating" fill="solid" placeholder="Ingresar nombre Usuario"
-        [(ngModel)]="userLoginModal.usuario"></ion-input>
+        [(ngModel)]="userLoginModal.nombre_usuario"></ion-input>
 
       <br />
 
