--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -15,10 +15,10 @@
       <ion-label style="color: dodgerblue">Información del Conductor: </ion-label>
     </ion-list-header>
     <ion-item>
-      <ion-label>Vehiculo: {{ userInfoReceived?.marcaVehiculo }} {{ userInfoReceived?.modeloVehiculo }} {{ userInfoReceived?.color }}</ion-label>
+      <ion-label>Vehiculo: {{ vehiculoInfoReceived?.marca_vehiculo }} {{ vehiculoInfoReceived?.modelo_vehiculo }} {{ vehiculoInfoReceived?.color_vehiculo }}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>Patente Vehiculo: {{ userInfoReceived?.patente }}</ion-label>
+      <ion-label>Patente Vehiculo: {{ vehiculoInfoReceived?.patente_vehiculo }}</ion-label>
     </ion-item>
     <ion-item>
       <ion-label [contentEditable]="true">Mail: {{ userInfoReceived?.mail }}</ion-label>
