--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -23,6 +23,21 @@
   </ion-list>
 
   <div style="text-align: center;">
+
+    <ion-list [inset]="true">
+      <ion-icon name="car-outline" style="zoom:3.0;"></ion-icon>
+      <ion-item>
+        <ion-label>Conductor {{ userInfoReceived?.nombre }}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Vehiculo: {{ vehiculoInfoReceived?.marca_vehiculo }} {{ vehiculoInfoReceived?.modelo_vehiculo }} {{
+          vehiculoInfoReceived?.color_vehiculo }}</ion-label>
+      </ion-item>
+    </ion-list>
+  
+  </div>
+
+  <div style="text-align: center;">
     
     <ion-button expand="full" color="danger" (click)="cerrarSesion()">Cerrar Sesion</ion-button>
 
