--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -26,6 +26,9 @@
     <ion-item>
       <ion-label>Contraseña: {{ userInfoReceived?.pass }}</ion-label>
     </ion-item>
+    <ion-item>
+      <ion-toggle [checked]="false">Habilitar Vehiculo</ion-toggle>
+    </ion-item>
   </ion-list>
 
   <div style="text-align: center;">
