--- a/src/app/registrarusuario/registrarusuario.page.html
+++ b/src/app/registrarusuario/registrarusuario.page.html
@@ -11,14 +11,14 @@
       </ion-item>
     </ion-list>
     <ion-input label="Nombre de Usuario" label-placement="floating" fill="solid"
-      placeholder="Ingresar nombre de Usuario"></ion-input>
+      placeholder="Ingresar nombre de Usuario" [(ngModel)]="userRegisterModal.nombre_usuario" required></ion-input>
     <ion-input label="Ingresar contraseña" label-placement="floating" fill="solid" placeholder="Contraseña"
-      type="password"></ion-input>
+      type="password" [(ngModel)]="userRegisterModal.pass" required></ion-input>
     <ion-input label="E-mail" label-placement="floating" fill="solid" placeholder="Ingresar mail"></ion-input>
     <ion-input label="Nombre alumno" label-placement="floating" fill="solid"
-      placeholder="Ingresar nombre alumno"></ion-input>
+      placeholder="Ingresar nombre alumno" [(ngModel)]="userRegisterModal.nombre" required></ion-input>
     <ion-input label="Apelido alumno" label-placement="floating" fill="solid"
-      placeholder="Ingresar apellido alumno"></ion-input>
+      placeholder="Ingresar apellido alumno" [(ngModel)]="userRegisterModal.apellido" required></ion-input>
     <ion-input label="Marca Vehiculo" label-placement="floating" fill="solid"
       placeholder="Ingresar marca vehiculo"></ion-input>
     <ion-input label="Modelo Vehiculo" label-placement="floating" fill="solid"
@@ -30,7 +30,7 @@
 
   <div style="text-align: center;">
 
-    <ion-button expand="full" color="success" (click)="guardar()">Guardar</ion-button>
+    <ion-button expand="full" color="success" (click)="registrarUsuario()">Guardar</ion-button>
     <ion-button expand="full" color="danger" (click)="salir()">Salir</ion-button>
 
   </div>
