--- a/src/app/pasajero/pasajero.page.html
+++ b/src/app/pasajero/pasajero.page.html
@@ -4,13 +4,13 @@
     userInfoReceived?.apellido }} </h1>
 
     <ion-item>
-      <ion-avatar slot="start">
+      <ion-avatar slot="start" *ngIf="cargando">
         <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
       </ion-avatar>
       <ion-label> <ion-label>{{ userInfoReceived?.nombre }} {{ userInfoReceived?.apellido }}</ion-label> </ion-label>
     </ion-item>
 
-  <ion-list [inset]="true">
+  <ion-list [inset]="true" *ngIf="cargando">
     <ion-list-header>
       <ion-label style="color: dodgerblue">Información del Pasajero: </ion-label>
     </ion-list-header>
@@ -22,7 +22,7 @@
     </ion-item>
   </ion-list>
 
-  <div style="text-align: center;">
+  <div style="text-align: center;" *ngIf="cargando">
 
     <ion-list [inset]="true">
       <ion-icon name="car-outline" style="zoom:3.0;"></ion-icon>
